--- a/Arkanoid/appsettings.json
+++ b/Arkanoid/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Arkanoid-59964B5A-BE73-4445-994D-F4EE4F08A3A0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=Arkanoid;User Id=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
