--- a/.gitignore
+++ b/.gitignore
@@ -259,5 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/Arkanoid/logger_19.02.2019.txt
-/Arkanoid/logger_19.03.2019.txt
+/Arkanoid/logs
